CMAPI-Release.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: quotes2
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: quotes2
    spec:
      containers:
      - name: quotes2
        image: dmacr.azurecr.io/scui2:__BuildNumber__
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
      imagePullSecrets:
      - name: quotesregistrykey
---
apiVersion: v1
kind: Service
metadata:
  name: quotes2
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: quotes2
